--- a/nicepage.css
+++ b/nicepage.css
@@ -35838,13 +35838,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 152px;
+  min-height: 171px;
 }
 
 .u-header .u-image-1 {
-  width: 102px;
-  height: 102px;
-  margin: 25px auto 0 14px;
+  width: 250px;
+  height: 121px;
+  margin: 25px auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -35853,7 +35853,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -81px 0 46px auto;
+  margin: -90px 0 56px auto;
 }
 
 .u-header .u-nav-1 {
@@ -35867,13 +35867,9 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1.25rem;
 }
 @media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    margin-left: 14px;
-  }
-
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -81px;
+    margin-top: -90px;
   }
 }
 
