--- a/Home.css
+++ b/Home.css
@@ -9,7 +9,7 @@
 
 .u-section-1 .u-image-1 {
   min-height: 400px;
-  background-image: url("images/HDT_graphic1.jpg");
+  background-image: url("images/img.svg");
   background-position: 50% 50%;
 }
 
