--- a/Home.css
+++ b/Home.css
@@ -9,7 +9,7 @@
 
 .u-section-1 .u-image-1 {
   min-height: 400px;
-  background-image: url("images/body_img.png");
+  background-image: url("images/body_img.png?rand=779a");
   background-position: 50% 50%;
 }
 
