--- a/about.css
+++ b/about.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 361px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
@@ -8,35 +8,56 @@
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 400px;
-  background-image: url("images/contact_img.png");
-  background-position: 50% 50%;
+  min-height: 361px;
+  background-image: url("images/about_img.png");
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 30px;
+  padding: 15px 0 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 400px;
+  min-height: 361px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 30px;
+  padding: 7px 30px;
+}
+
+.u-section-1 .u-group-1 {
+  min-height: 322px;
+  margin-top: 0;
+  margin-bottom: 0;
+  height: auto;
 }
 
 .u-section-1 .u-text-1 {
+  font-size: 2.25rem;
   margin: 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.25rem;
-  margin: 20px 0 0;
+  margin: 17px 0 0;
+}
+
+.u-section-1 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  margin: 8px auto 0 217px;
+}
+
+.u-section-1 .u-text-3 {
+  font-size: 1.25rem;
+  margin: 14px 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 330px;
+    min-height: 359px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -44,40 +65,48 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 330px;
+    min-height: 298px;
+    background-position: 50% 50%;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 330px;
+    min-height: 298px;
+  }
+
+  .u-section-1 .u-group-1 {
+    height: auto;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: 90px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 253px;
+    min-height: 282px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 253px;
+    min-height: 228px;
   }
 
   .u-section-1 .u-layout-cell-2 {
     min-height: 100px;
   }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 480px;
+    min-height: 509px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 380px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    min-height: 435px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -88,10 +117,14 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 339px;
+    min-height: 368px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 239px;
+    min-height: 274px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
   }
 }
