--- a/about.css
+++ b/about.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 361px;
+  min-height: 400px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
@@ -8,56 +8,52 @@
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 361px;
+  min-height: 400px;
   background-image: url("images/about_img.png");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 15px 0 0;
+  padding: 30px;
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 361px;
+  min-height: 400px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 7px 30px;
-}
-
-.u-section-1 .u-group-1 {
-  min-height: 322px;
-  margin-top: 0;
-  margin-bottom: 0;
-  height: auto;
+  padding: 30px;
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 2.25rem;
-  margin: 0;
+  font-weight: 700;
+  font-size: 2.1875rem;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.25rem;
-  margin: 17px 0 0;
+  margin: 12px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
   border-style: solid;
-  font-weight: 700;
-  text-transform: uppercase;
   font-size: 1.125rem;
   letter-spacing: 1px;
-  margin: 8px auto 0 217px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 12px auto 0;
+  padding: 17px 43px 19px 42px;
 }
 
 .u-section-1 .u-text-3 {
-  font-size: 1.25rem;
-  margin: 14px 0 0;
+  font-size: 0.9375rem;
+  margin: 30px 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 359px;
+    min-height: 330px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -65,66 +61,68 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 298px;
-    background-position: 50% 50%;
+    min-height: 330px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 298px;
-  }
-
-  .u-section-1 .u-group-1 {
-    height: auto;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: 90px;
+    min-height: 330px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 282px;
+    min-height: 253px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 228px;
+    min-height: 253px;
   }
 
   .u-section-1 .u-layout-cell-2 {
     min-height: 100px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-left: 0;
+  .u-section-1 .u-text-1 {
+    margin-left: 7px;
+    margin-right: 7px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 509px;
+    min-height: 480px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 435px;
+    min-height: 380px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-1 .u-text-1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 368px;
+    min-height: 339px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 274px;
+    min-height: 239px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.875rem;
+    font-size: 1.5rem;
   }
 }
