--- a/about.css
+++ b/about.css
@@ -8,7 +8,7 @@
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 400px;
+  min-height: 377px;
   background-image: url("images/about_img.png");
   background-position: 50% 50%;
 }
@@ -18,11 +18,11 @@
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 400px;
+  min-height: 378px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 30px;
+  padding: 14px 30px;
 }
 
 .u-section-1 .u-text-1 {
@@ -33,7 +33,7 @@
 
 .u-section-1 .u-text-2 {
   font-size: 1.25rem;
-  margin: 12px 0 0;
+  margin: 22px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -42,18 +42,19 @@
   letter-spacing: 1px;
   font-weight: 700;
   text-transform: uppercase;
+  align-self: center;
   margin: 12px auto 0;
   padding: 17px 43px 19px 42px;
 }
 
 .u-section-1 .u-text-3 {
   font-size: 0.9375rem;
-  margin: 30px 0 0;
+  margin: 6px 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 330px;
+    min-height: 352px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -61,21 +62,21 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 330px;
+    min-height: 311px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 330px;
+    min-height: 312px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 253px;
+    min-height: 275px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 253px;
+    min-height: 238px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -90,11 +91,11 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 480px;
+    min-height: 502px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 380px;
+    min-height: 357px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -115,11 +116,11 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 339px;
+    min-height: 361px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 239px;
+    min-height: 225px;
   }
 
   .u-section-1 .u-text-1 {
