--- a/exchange.css
+++ b/exchange.css
@@ -95,7 +95,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 456px;
 }
 
 .u-section-2 .u-text-1 {
@@ -120,88 +120,15 @@
 }
 
 .u-section-2 .u-table-1 {
-  width: 1129px;
-  margin: 19px auto 0;
+  width: 1102px;
+  margin: 6px auto 60px;
 }
 
-.u-block-1c1c-58 {
+.u-block-1c1c-96 {
   height: 46px;
 }
 
-.u-section-2 .u-table-cell-1 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  background-image: none;
-}
-
-.u-section-2 .u-table-cell-2 {
-  border-style: solid;
-  background-image: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.u-section-2 .u-table-cell-3 {
-  background-image: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.u-section-2 .u-table-cell-4 {
-  background-image: none;
-  font-weight: 700;
-  font-size: 0.875rem;
-}
-
-.u-section-2 .u-table-cell-5 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  background-image: none;
-}
-
-.u-section-2 .u-table-cell-6 {
-  background-image: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.u-section-2 .u-table-cell-7 {
-  background-image: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.u-section-2 .u-table-cell-8 {
-  font-weight: 700;
-  font-size: 0.875rem;
-  background-image: none;
-}
-
-.u-section-2 .u-table-cell-9 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  background-image: none;
-}
-
-.u-section-2 .u-table-cell-10 {
-  background-image: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.u-section-2 .u-table-cell-11 {
-  background-image: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.u-section-2 .u-table-cell-12 {
-  font-weight: 700;
-  font-size: 0.875rem;
-  background-image: none;
-}
-
-.u-block-1c1c-73 {
+.u-block-1c1c-107 {
   height: 46px;
 }
 
