--- a/exchange.css
+++ b/exchange.css
@@ -95,7 +95,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 456px;
+  min-height: 314px;
 }
 
 .u-section-2 .u-text-1 {
@@ -121,7 +121,8 @@
 
 .u-section-2 .u-table-1 {
   width: 1102px;
-  margin: 6px auto 60px;
+  height: 47px;
+  margin: 6px auto 0;
 }
 
 .u-block-1c1c-96 {
@@ -129,6 +130,42 @@
 }
 
 .u-block-1c1c-107 {
+  height: 46px;
+}
+
+.u-section-2 .u-table-2 {
+  width: 1102px;
+  height: 47px;
+  margin: 13px auto 0;
+}
+
+.u-block-1c1c-150 {
+  height: 46px;
+}
+
+.u-section-2 .u-table-cell-6 {
+  font-weight: 700;
+}
+
+.u-block-1c1c-161 {
+  height: 46px;
+}
+
+.u-section-2 .u-table-3 {
+  width: 1102px;
+  height: 47px;
+  margin: 13px auto 39px;
+}
+
+.u-block-1c1c-173 {
+  height: 46px;
+}
+
+.u-section-2 .u-table-cell-10 {
+  font-weight: 700;
+}
+
+.u-block-1c1c-184 {
   height: 46px;
 }
 
@@ -143,11 +180,33 @@
 
   .u-section-2 .u-table-1 {
     width: 940px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-table-2 {
+    width: 940px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-table-3 {
+    width: 940px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-table-1 {
+    width: 720px;
+  }
+
+  .u-section-2 .u-table-2 {
+    width: 720px;
+  }
+
+  .u-section-2 .u-table-3 {
     width: 720px;
   }
 }
@@ -164,6 +223,14 @@
   .u-section-2 .u-table-1 {
     width: 540px;
   }
+
+  .u-section-2 .u-table-2 {
+    width: 540px;
+  }
+
+  .u-section-2 .u-table-3 {
+    width: 540px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -176,6 +243,14 @@
   }
 
   .u-section-2 .u-table-1 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-table-2 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-table-3 {
     width: 340px;
   }
 }
