--- a/exchange.css
+++ b/exchange.css
@@ -95,7 +95,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 314px;
+  min-height: 641px;
 }
 
 .u-section-2 .u-text-1 {
@@ -105,8 +105,7 @@
 
 .u-section-2 .u-text-2 {
   font-size: 1.25rem;
-  width: 758px;
-  margin: 6px auto 0;
+  margin: 6px 112px 0;
 }
 
 .u-section-2 .u-btn-1 {
@@ -119,54 +118,11 @@
   padding: 0;
 }
 
-.u-section-2 .u-table-1 {
-  width: 1102px;
-  height: 47px;
-  margin: 6px auto 0;
-}
-
-.u-block-1c1c-96 {
-  height: 46px;
-}
-
-.u-block-1c1c-107 {
-  height: 46px;
-}
-
-.u-section-2 .u-table-2 {
-  width: 1102px;
-  height: 47px;
-  margin: 13px auto 0;
-}
-
-.u-block-1c1c-150 {
-  height: 46px;
-}
-
-.u-section-2 .u-table-cell-6 {
-  font-weight: 700;
-}
-
-.u-block-1c1c-161 {
-  height: 46px;
-}
-
-.u-section-2 .u-table-3 {
-  width: 1102px;
-  height: 47px;
-  margin: 13px auto 39px;
-}
-
-.u-block-1c1c-173 {
-  height: 46px;
-}
-
-.u-section-2 .u-table-cell-10 {
-  font-weight: 700;
-}
-
-.u-block-1c1c-184 {
-  height: 46px;
+.u-section-2 .u-custom-html-1 {
+  margin-bottom: 60px;
+  margin-top: 0;
+  height: auto;
+  min-height: 447px;
 }
 
 @media (max-width: 1199px) {
@@ -176,38 +132,15 @@
 
   .u-section-2 .u-text-2 {
     width: 647px;
-  }
-
-  .u-section-2 .u-table-1 {
-    width: 940px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-table-2 {
-    width: 940px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-table-3 {
-    width: 940px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 12px;
+    margin-right: 12px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-table-1 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-table-2 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-table-3 {
-    width: 720px;
+  .u-section-2 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -219,18 +152,6 @@
   .u-section-2 .u-text-2 {
     width: 540px;
   }
-
-  .u-section-2 .u-table-1 {
-    width: 540px;
-  }
-
-  .u-section-2 .u-table-2 {
-    width: 540px;
-  }
-
-  .u-section-2 .u-table-3 {
-    width: 540px;
-  }
 }
 
 @media (max-width: 575px) {
@@ -239,18 +160,6 @@
   }
 
   .u-section-2 .u-text-2 {
-    width: 340px;
-  }
-
-  .u-section-2 .u-table-1 {
-    width: 340px;
-  }
-
-  .u-section-2 .u-table-2 {
-    width: 340px;
-  }
-
-  .u-section-2 .u-table-3 {
     width: 340px;
   }
 }
