--- a/exchange.css
+++ b/exchange.css
@@ -119,9 +119,10 @@
 }
 
 .u-section-2 .u-custom-html-1 {
-  margin-bottom: 6px;
-  margin-top: 0;
+  margin-bottom: 19px;
+  margin-top: -13px;
   min-height: 447px;
+  height: auto;
 }
 
 @media (max-width: 1199px) {
@@ -133,10 +134,6 @@
     width: 647px;
     margin-left: 12px;
     margin-right: 12px;
-  }
-
-  .u-section-2 .u-custom-html-1 {
-    height: auto;
   }
 }
 
