--- a/nicepage.css
+++ b/nicepage.css
@@ -36544,6 +36544,10 @@ a.u-link.u-text-hover-grey-90:hover {
         margin-top: 20px;
         margin-bottom: 20px;
         }
+        .u-body
+        {
+        background-attachment: fixed;
+        }
         /** common-rules **/
 
         /** publish-rules **/
