--- a/about.css
+++ b/about.css
@@ -1,14 +1,14 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 480px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 377px;
+  min-height: 451px;
   background-image: url("images/about_img.png");
   background-position: 50% 50%;
 }
@@ -18,7 +18,7 @@
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 378px;
+  min-height: 451px;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -33,7 +33,7 @@
 
 .u-section-1 .u-text-2 {
   font-size: 1.25rem;
-  margin: 22px 0 0;
+  margin: 16px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -43,13 +43,30 @@
   font-weight: 700;
   text-transform: uppercase;
   align-self: center;
-  margin: 12px auto 0;
-  padding: 17px 43px 19px 42px;
+  margin: 23px auto 0;
+  padding: 17px 143px 19px 142px;
 }
 
-.u-section-1 .u-text-3 {
-  font-size: 0.9375rem;
-  margin: 6px 0 0;
+.u-section-1 .u-btn-2 {
+  border-style: solid;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  text-transform: uppercase;
+  align-self: center;
+  margin: 15px auto 0;
+  padding: 18px 113px;
+}
+
+.u-section-1 .u-btn-3 {
+  border-style: solid;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  text-transform: uppercase;
+  align-self: center;
+  margin: 15px auto 0;
+  padding: 17px 67px 19px 66px;
 }
 
 @media (max-width: 1199px) {
@@ -62,11 +79,11 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 311px;
+    min-height: 372px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 312px;
+    min-height: 372px;
   }
 }
 
@@ -76,7 +93,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 238px;
+    min-height: 285px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -87,6 +104,21 @@
     margin-left: 7px;
     margin-right: 7px;
   }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -95,7 +127,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 357px;
+    min-height: 428px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -112,6 +144,21 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 575px) {
@@ -120,10 +167,25 @@
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 225px;
+    min-height: 269px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 1.5rem;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -20px;
+    margin-right: -20px;
   }
 }
